--- a/scripts/install
+++ b/scripts/install
@@ -2,6 +2,8 @@
 
 set -e
 
+sudo apt install -y btop polybar picom ripgrep libusb-1.0-0-dev
+
 # - Keymapp ----
 if ! command -v keymapp &> /dev/null; then
     echo "keymapp is not installed. Installing..."
@@ -38,12 +40,20 @@ else
 fi
 
 # - Node ----
-if ! command -v npm &> /dev/null; then
-    echo "npm is not installed. Installing..."
-    curl -fsSL https://deb.nodesource.com/setup_lts.x | sudo -E bash -
-    sudo apt-get install -y nodejs
+if ! command -v kitty &> /dev/null; then
+    sudo apt-get update
+    sudo apt-get install -y ca-certificates curl gnupg
+    sudo mkdir -p /etc/apt/keyrings
+    curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | sudo gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg
+
+    NODE_MAJOR=21
+    echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_$NODE_MAJOR.x nodistro main" | sudo tee /etc/apt/sources.list.d/nodesource.list
+
+    sudo apt-get update
+    sudo apt-get install nodejs -y
+
 else
-    echo "npm is already installed. Skipping installation."
+    echo "Node runtime is already installed. Skipping installation."
 fi
 
 # - TPM ----
