--- a/dots/.config/i3/config.save.1
+++ b/dots/.config/i3/config.save.1
@@ -2,13 +2,16 @@
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 #
-#exec --no-startup-id "setxkbmap -option ctrl:nocaps"
+exec --no-startup-id "setxkbmap -option ctrl:nocaps"
 set $mod Mod4
 set $alt Mod1
 
-for_window [class=".*"] border pixel 0
-# gaps inner 13
-# gaps outer 6
+for_window [class=".*"]
+gaps outer 6
+smart_borders on
+
+focus_on_window_activation smart
+popup_during_fullscreen smart
 
 font pango:Jetbrains Mono 10
 
